# Cryptocurrency-Market-Data-TWAP-Paper-Trading-API

./: GUI.py  LICENSE  README.md  check_dependencies.py  client.py  projet_api.py  pyproject.toml  server - A SUPP après.py  server.py  simple_example.py
client/: __init__.py  trading_client.py
server/: server.py
tests/: test_trading_client.py
