[build-system]  
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Cryptocurrency-Market-Data-TWAP-Paper-Trading-API"                     
version = "0.1.0"
description = "A client distribution for TWAP cryptocurrency trading. Use of the associated API server is required"
authors = ["Giovanni MANCHE", "Tania ADMANE", "Ariane TRUSSANT", "Cherine RHELLAB", "Antonin DEVALLAND", "Lauryn LETACONNOUX", "Fanny GAUDUCHEAU"]
readme = "README.md"
packages = [{include = "client"}]   

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"
websockets = "^12.0"
asyncio = "^3.4.3"                    

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"     
pytest-mock = "^3.14.0"


[tool.poetry.group."dev*".dependencies]
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]